Added advanced JavaScript resource links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -600,6 +600,7 @@
               codes. You can find the editors used by most front-end developers
               below, with the most popular being VsCode.
             </p>
+            <p>But before diving in, check this video out; <a href="https://youtu.be/kCZQPL8u_YI">Best 3 editors for coding and why. ~ Tutmo</a>
           </div>
 
           <div class="resource-section__links">
@@ -1278,21 +1279,18 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/WZQc7RUAg18"
+                    >ES6 JavaScript tutorials for beginners. ~ Dev Ed</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/nZ1DMMsyVyI"
+                    >JavaScript ES6, ES7, ES8 tutorial. ~ FreeCodeCamp/a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/cRHQNNcYf6s"
+                    JavaScript ES6 modules. ~ Web Dev Simplified</a
                   >
                 </li>
               </ul>
@@ -1303,50 +1301,27 @@
               <h3 class="resource-card-title">Curated Playlist</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL0Zuz27SZ-6N3bG4YZhkrCL3ZmDcLTuGd"
+                    >Advanced JavaScript Concepts. ~ Dave Grey</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLvZkOAgBYrsSZiL0L7T-CBGdiBUaHok4x"
+                    >Advanced JavaScript Concepts, the complete series. ~ Tech CBT</a
                   >
                 </li>
               </ul>
             </div>
 
-            <!-- paid courses -->
+            <!-- courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Paid Courses</h3>
+              <h3 class="resource-card-title">Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
-                  <span class="resource-link-badge">Udemy</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Coursera</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Skillshare</span>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
@@ -1357,20 +1332,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
                 </li>
               </ul>
@@ -1381,21 +1343,8 @@
               <h3 class="resource-card-title">Practice Projects</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLpwngcHZlPadhRwryAXw3mJWX5KH3T5L3"
+                    >Basic and advanced JavaScript Projects. ~ Coding Nepal</a
                   >
                 </li>
               </ul>
@@ -1408,24 +1357,9 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
-                  <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Article</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Document</span>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
