Fixed link bugs.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -600,7 +600,7 @@
               codes. You can find the editors used by most front-end developers
               below, with the most popular being VsCode.
             </p>
-            <p>But before diving in, check this video out; <a href="https://youtu.be/kCZQPL8u_YI">Best 3 editors for coding and why. ~ Tutmo</a>
+            <p>But before diving in, check this video out; <a class="resource-link" href="https://youtu.be/kCZQPL8u_YI">Best 3 editors for coding and why. ~ Tutmo</a>
           </div>
 
           <div class="resource-section__links">
@@ -1285,11 +1285,11 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/nZ1DMMsyVyI"
-                    >JavaScript ES6, ES7, ES8 tutorial. ~ FreeCodeCamp/a
+                    >JavaScript ES6, ES7, ES8 tutorial. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/cRHQNNcYf6s"
+                  <a target="_blank" href="https://youtu.be/cRHQNNcYf6s">
                     JavaScript ES6 modules. ~ Web Dev Simplified</a
                   >
                 </li>
