added version control resource links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1380,8 +1380,8 @@
             </p>
             <p>
               If you are finding Git hard to understand, you can learn Git
-              Desktop which is less complicated. Use it for a while and then
-              come back to Git.
+              Desktop created by GitHub which makes using Git less complicated. Use it for a while and then
+              come back to Git. Then you to choose which ever version control service you prefer among GitHub, GitLab and BitBucket.
             </p>
           </div>
 
@@ -1391,21 +1391,8 @@
               <h3 class="resource-card-title">Git</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL_euSNU_eLbegnt7aR8I1gXfLhKZbxnYX"
+                    >Git complete course tutorial. ~ Leela Web Dev</a
                   >
                 </li>
               </ul>
@@ -1416,21 +1403,33 @@
               <h3 class="resource-card-title">GitHub</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/RGOj5yH7evk"
+                    >Git and GitHub for beginners. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/WgZIv5HI44o"
+                    >GitHub: adding an SSH key. ~ SyntaxByte</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/1vVIpIvboSg"
+                    >Creating and managing a GPG key pair. ~ Nick Janetakis</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/4166ExAnxmo"
+                    >Signing and verifying Git commits on the command line and GitHub. ~ Nick Janetakis</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account"
+                    >Adding a new SSH key to your GitHub account ~ GitHub documentation</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://docs.github.com/en/authentication/managing-commit-signature-verification/adding-a-new-gpg-key-to-your-github-account"
+                    >Adding a new GPG key to your GitHub account ~ GitHub documentation</a
                   >
                 </li>
               </ul>
@@ -1441,46 +1440,32 @@
               <h3 class="resource-card-title">Git Desktop</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/GqNAD4XoZ6k"
+                    >Using Git Desktop for beginners. ~ Kevin Powell</a
                   >
                 </li>
               </ul>
             </div>
 
-            <!--* bit bucket -->
+            <!--* Git lab -->
+            <div id="bitbucket" class="resource-card">
+              <h3 class="resource-card-title">GitLab</h3>
+              <ul class="resource-card-links">
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLu-nSsOS6FRIg52MWrd7C_qSnQp3ZoHwW"
+                    >Git and GitLab tutorial. ~ GitSchoolDude</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <!--* bitbucket -->
             <div id="bitbucket" class="resource-card">
               <h3 class="resource-card-title">BitBucket</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
                 </li>
               </ul>
