--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1493,21 +1493,23 @@
               <h3 class="resource-card-title">Vercel</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://vercel.com"
+                    >Website</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://vercel.com/docs"
+                    >Documentation</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/mP8KIAros70"
+                    >Deploy a website to vercel. - WebDemystified</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/6YRymPx1-4s"
+                    >Deploying an applicatiin with vercel. - webdemystifiedcalab Barger</a
                   >
                 </li>
               </ul>
@@ -1518,21 +1520,23 @@
               <h3 class="resource-card-title">Netlify</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://netlify.com"
+                    >Website</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://docs.netlify.com/"
+                    >Documentation.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/cUMUTS2ybhg"
+                    >Host websites on Netlify for free. ~ Packetcode</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/bjVUqvcCnxM"
+                    >Deploy websites in seconds with Netlify ~ Travesty Media</a
                   >
                 </li>
               </ul>
