--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1509,7 +1509,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/6YRymPx1-4s"
-                    >Deploying an applicatiin with vercel. - webdemystifiedcalab Barger</a
+                    >Deploying an applicatiin with vercel. - Caleb Barger</a
                   >
                 </li>
               </ul>
