added cssprocessors resource links.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1509,7 +1509,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/6YRymPx1-4s"
-                    >Deploying an applicatiin with vercel. - Caleb Barger</a
+                    >Deploying an application with vercel. - Caleb Barger</a
                   >
                 </li>
               </ul>
@@ -1560,6 +1560,7 @@
               features that have JavaScript integrated into them. Check out some
               of the most popular ones below.
             </p>
+            <p>Note: You do not need to learn all of them, you just have to know atleast one CSS-only and one CSS-Js framework/library.</p>
           </div>
 
           <div class="resource-section__links">
@@ -2042,51 +2043,46 @@
           </div>
 
           <div class="resource-section__links">
-            <!--* Less -->
-            <div id="less" class="resource-card">
-              <h3 class="resource-card-title">Less</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-              </ul>
-            </div>
 
             <!--* sass -->
             <div id="sass" class="resource-card">
               <h3 class="resource-card-title">Sass</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://sass-lang.com/"
+                    >Website.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://sass-lang.com/documentation"
+                    >Documentation.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/_a5j7KoflTs"
+                    >Sass tutorial for beginners. ~ FreeCodeCamp</a
+                  >
+                </li>
+              </ul>
+            </div>
+           
+            <!--* Less -->
+            <div id="less" class="resource-card">
+              <h3 class="resource-card-title">Less</h3>
+              <ul class="resource-card-links">
+                <li class="resource-link">
+                  <a target="_blank" href="https://lesscss.org/"
+                    >Website.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://lesscss.org/usage/"
+                    >Documentation.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/YD91G8DdUsw"
+                    >Less CSS Preprocessor for beginners. ~ Travesty Media</a
                   >
                 </li>
               </ul>
@@ -2097,21 +2093,18 @@
               <h3 class="resource-card-title">PostCSS</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://postcss.org/"
+                    >Website.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://github.com/postcss/postcss/tree/main/docs"
+                    >Documentation.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/ohJcZW60br0"
+                    >Learn how to power up your CSS with PostCSS. ~ Kevin Powell.</a
                   >
                 </li>
               </ul>
