edited the meta tags descriptions and title.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="description"
-      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+      content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:description"
-      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+      content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
@@ -40,7 +40,7 @@
     />
     <meta
       property="twitter:description"
-      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+      content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
