--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -7,40 +7,40 @@
     <!--* The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!--* Title -->
-    <title>The different careers in tech. | Tech Roadmap.</title>
+    <title>Frontend Development Roadmap | Tech Roadmap.</title>
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
     <meta
       name="title"
-      content="The different careers in tech. | Tech Roadmap."
+      content="Frontend Development Roadmap | Tech Roadmap."
     />
     <meta
       name="description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Free videos, articles, guides and other resources to help you become a frontend developer."
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techroadmap.netlify.com" />
+    <meta property="og:url" content="https://techroadmap.netlify.app" />
     <meta
       property="og:title"
-      content="The different careers in tech. | Tech Roadmap."
+      content="Frontend Development Roadmap | Tech Roadmap."
     />
     <meta
       property="og:description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Free videos, articles, guides and other resources to help you become a frontend developer."
     />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://techroadmap.netlify.com" />
+    <meta property="twitter:url" content="https://techroadmap.netlify.app" />
     <meta
       property="twitter:title"
-      content="The different careers in tech. | Tech Roadmap."
+      content="Frontend Development Roadmap | Tech Roadmap."
     />
     <meta
       property="twitter:description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Free videos, articles, guides and other resources to help you become a frontend developer."
     />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
