--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="description"
-      content="This project is OpenSource. All contributions are welcome to grow this project and don't need to know how to code to contribute. You can contribute as a developer here or a non-developer here."
+      content="This project is OpenSource. Learn how to contribute to this project."
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:description"
-      content="This project is OpenSource. All contributions are welcome to grow this project and don't need to know how to code to contribute. You can contribute as a developer here or a non-developer here."
+      content="This project is OpenSource. Learn how to contribute to this project. You can contribute as a developer here or a non-developer here."
     />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
@@ -40,7 +40,7 @@
     />
     <meta
       property="twitter:description"
-      content="This project is OpenSource. All contributions are welcome to grow this project and don't need to know how to code to contribute. You can contribute as a developer here or a non-developer here."
+      content="This project is OpenSource. Learn how to contribute to this project. You can contribute as a developer here or a non-developer here."
     />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
