fixed the nav links not linking to other pages on remote repo.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -64,31 +64,31 @@
     <!-- This comes first -->
     <link
       rel="stylesheet"
-      type="text/Css"
-      href="/Css/Css-resets/normalise.Css"
+      type="text/css"
+      href="../../css/css-resets/normalise.css"
     />
     <!-- My Css reset -->
     <!-- This comes second -->
     <link
       rel="stylesheet"
-      type="text/Css"
-      href="/Css/Css-resets/my-Css-reset.Css"
+      type="text/css"
+      href="../../css/css-resets/my-css-reset.css"
     />
     <!-- My Font reset -->
     <!-- This comes third -->
     <link
       rel="stylesheet"
-      type="text/Css"
-      href="/Css/Css-resets/my-font-reset.Css"
+      type="text/css"
+      href="../../css/css-resets/my-font-reset.css"
     />
 
     <!--* Css (My codes) -->
     <!-- My Css Variables -->
     <!-- This comes first -->
-    <link rel="stylesheet" type="text/Css" href="/Css/variables.Css" />
+    <link rel="stylesheet" type="text/Css" href="../../css/variables.css" />
     <!-- main Css styles -->
     <!-- This comes second -->
-    <link rel="stylesheet" type="text/Css" href="/Css/main.Css" />
+    <link rel="stylesheet" type="text/Css" href="../../css/main.css" />
   </head>
 
   <body>
@@ -101,7 +101,7 @@
         <div class="nav-wrapper">
           <!-- website logo -->
           <div class="nav-logo">
-            <a href="/"><p>TECH ROAD MAP</p></a>
+            <a href="../../index.html"><p>TECH ROAD MAP</p></a>
             <!-- <a href="#"><h4>NavBar</h4></a> -->
             <!-- <a href="#"><img src="" alt="brand image"></a> -->
           </div>
@@ -111,12 +111,12 @@
             <!-- nav link cntr -->
             <ul class="nav-link-wrapper">
               <!-- nav links -->
-              <li><a class="nav-link" href="/">Home</a></li>
+              <li><a class="nav-link" href="../../index.html">Home</a></li>
               <li>
-                <a class="nav-link" href="/html/careers.html">Careers</a>
+                <a class="nav-link" href="../../html/careers.html">Careers</a>
               </li>
               <li>
-                <a class="nav-link" href="/html/contribute.html">Contribute</a>
+                <a class="nav-link" href="../../html/contribute.html">Contribute</a>
               </li>
             </ul>
           </div>
@@ -3429,7 +3429,7 @@
               If you would like to contribute to this project, please visit our
               <a
                 class="paragraph-links"
-                href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+                href="../../html/contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -3450,14 +3450,14 @@
           <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
-              <li><a class="footer-link para-link" href="/">Home</a></li>
+              <li><a class="footer-link para-link" href="../../index.html">Home</a></li>
               <li>
-                <a class="footer-link para-link" href="/html/careers.html"
+                <a class="footer-link para-link" href="../../html/careers.html"
                   >Careers</a
                 >
               </li>
               <li>
-                <a class="footer-link para-link" href="/html/contribute.html"
+                <a class="footer-link para-link" href="../../html/contribute.html"
                   >Contribute</a
                 >
               </li>
@@ -3467,7 +3467,7 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links" href="/">Tech Roadmap</a> is created by
+              <a class="paragraph-links" href="../../index.html">Tech Roadmap</a> is created by
               <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
               >
@@ -3493,6 +3493,6 @@
     <!--* JavaScripts -->
     <!--* My Javascript codes -->
     <!-- Main Javascript code -->
-    <script src="/js/script.js"></script>
+    <script src="../../js/script.js"></script>
   </body>
 </html>
