--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -65,30 +65,30 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/css-resets/normalise.css"
+      href="../css/css-resets/normalise.css"
     />
     <!-- My CSS reset -->
     <!-- This comes second -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/css-resets/my-css-reset.css"
+      href="../css/css-resets/my-css-reset.css"
     />
     <!-- My Font reset -->
     <!-- This comes third -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/css-resets/my-font-reset.css"
+      href="../css/css-resets/my-font-reset.css"
     />
 
     <!--* CSS (My codes) -->
     <!-- My CSS Variables -->
     <!-- This comes first -->
-    <link rel="stylesheet" type="text/css" href="/css/variables.css" />
+    <link rel="stylesheet" type="text/css" href="../css/variables.css" />
     <!-- main CSS styles -->
     <!-- This comes second -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
   </head>
 
   <body>
@@ -100,7 +100,7 @@
         <div class="nav-wrapper">
           <!-- website logo -->
           <div class="nav-logo">
-            <a href="/"><p>TECH ROAD MAP</p></a>
+            <a href="../index.html"><p>TECH ROAD MAP</p></a>
             <!-- <a href="#"><h4>NavBar</h4></a> -->
             <!-- <a href="#"><img src="" alt="brand image"></a> -->
           </div>
@@ -110,12 +110,12 @@
             <!-- nav link cntr -->
             <ul class="nav-link-wrapper">
               <!-- nav links -->
-              <li><a class="nav-link" href="/">Home</a></li>
+              <li><a class="nav-link" href="../index.html">Home</a></li>
               <li>
-                <a class="nav-link" href="/html/careers.html">Careers</a>
+                <a class="nav-link" href="../html/careers.html">Careers</a>
               </li>
               <li>
-                <a class="nav-link" href="/html/contribute.html">Contribute</a>
+                <a class="nav-link" href="../html/contribute.html">Contribute</a>
               </li>
             </ul>
           </div>
@@ -232,7 +232,7 @@
               If you would like to contribute to this project, please visit our
               <a
                 class="paragraph-links"
-                href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+                href="../html/contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -253,14 +253,14 @@
           <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
-              <li><a class="footer-link para-link" href="/">Home</a></li>
+              <li><a class="footer-link para-link" href="../index.html">Home</a></li>
               <li>
-                <a class="footer-link para-link" href="/html/careers.html"
+                <a class="footer-link para-link" href="../html/careers.html"
                   >Careers</a
                 >
               </li>
               <li>
-                <a class="footer-link para-link" href="/html/contribute.html"
+                <a class="footer-link para-link" href="../html/contribute.html"
                   >Contribute</a
                 >
               </li>
@@ -270,7 +270,7 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links" href="/">Tech Roadmap</a> is created by
+              <a class="paragraph-links" href="../index.html">Tech Roadmap</a> is created by
               <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
               >
@@ -296,6 +296,6 @@
     <!--* JavaScripts -->
     <!--* My Javascript codes -->
     <!-- Main Javascript code -->
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
