--- a/src/index.html
+++ b/src/index.html
@@ -56,30 +56,30 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/css-resets/normalise.css"
+      href="./css/css-resets/normalise.css"
     />
     <!-- My CSS reset -->
     <!-- This comes second -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/css-resets/my-css-reset.css"
+      href="./css/css-resets/my-css-reset.css"
     />
     <!-- My Font reset -->
     <!-- This comes third -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/css-resets/my-font-reset.css"
+      href="./css/css-resets/my-font-reset.css"
     />
 
     <!--* CSS (My codes) -->
     <!-- My CSS Variables -->
     <!-- This comes first -->
-    <link rel="stylesheet" type="text/css" href="/css/variables.css" />
+    <link rel="stylesheet" type="text/css" href="./css/variables.css" />
     <!-- main CSS styles -->
     <!-- This comes second -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
   </head>
 
   <body>
@@ -91,7 +91,7 @@
         <div class="nav-wrapper">
           <!-- website logo -->
           <div class="nav-logo">
-            <a href="/"><p>TECH ROADMAP</p></a>
+            <a href="./"><p>TECH ROADMAP</p></a>
             <!-- <a href="#"><h4>NavBar</h4></a> -->
             <!-- <a href="#"><img src="" alt="brand image"></a> -->
           </div>
@@ -101,12 +101,12 @@
             <!-- nav link cntr -->
             <ul class="nav-link-wrapper">
               <!-- nav links -->
-              <li><a class="nav-link" href="/">Home</a></li>
+              <li><a class="nav-link" href="./">Home</a></li>
               <li>
-                <a class="nav-link" href="/html/careers.html">Careers</a>
+                <a class="nav-link" href="./html/careers.html">Careers</a>
               </li>
               <li>
-                <a class="nav-link" href="/html/contribute.html">Contribute</a>
+                <a class="nav-link" href="./html/contribute.html">Contribute</a>
               </li>
             </ul>
           </div>
@@ -160,7 +160,7 @@
               <p>
                 You can click on one of the career cards below if you have
                 already chosen a career path or go to our
-                <a class="paragraph-links" href="/html/careers.html"
+                <a class="paragraph-links" href="./html/careers.html"
                   >careers page</a
                 >
                 if you need help in deciding the one to choose.
@@ -175,7 +175,7 @@
 
           <div class="careers__cards">
             <!-- frontend card -->
-            <a href="/html/careers/frontend.html" class="careers__card-link">
+            <a href="./html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
                 <p>
@@ -250,9 +250,7 @@
             </p>
             <p>
               If you would like to contribute to this project, please visit our
-              <a
-                class="paragraph-links"
-                href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+              <a class="paragraph-links" href="./html/contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -273,14 +271,14 @@
           <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
-              <li><a class="footer-link para-link" href="/">Home</a></li>
+              <li><a class="footer-link para-link" href="./">Home</a></li>
               <li>
-                <a class="footer-link para-link" href="/html/careers.html"
+                <a class="footer-link para-link" href="./html/careers.html"
                   >Careers</a
                 >
               </li>
               <li>
-                <a class="footer-link para-link" href="/html/contribute.html"
+                <a class="footer-link para-link" href="./html/contribute.html"
                   >Contribute</a
                 >
               </li>
@@ -290,7 +288,7 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links" href="/">Tech Roadmap</a> is created by
+              <a class="paragraph-links" href="./index.html">Tech Roadmap</a> is created by
               <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
               >
@@ -316,6 +314,6 @@
     <!--* JavaScripts -->
     <!--* My Javascript codes -->
     <!-- Main Javascript code -->
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
